Use sum function from java